// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CarsOverview renders correctly with Mazda 3 and Mercedes Benz CLA 1`] = `
<div
  className="container-fluid"
>
  <div
    className="row cars-overview-grid"
  >
    <div
      className="col-md-4 col-sm-6 col-xs-12 cars-overview-grid__item"
    >
      <div
        className="car-preview  "
        data-id={2}
        onClick={[Function]}
      >
        <div
          className="car-preview__card"
        >
          <div
            className="car-preview__front"
          >
            <img
              alt="Mazda 3"
              className="car-preview__image"
              src="https://www.mazdausa.com/siteassets/vehicles/2017/m3s/trims/sport/17-m3s-sp-25d-snowflake-white.png"
            />
          </div>
          <div
            className="car-preview__back"
          >
            <div
              className="car-preview__overlay"
            />
            <div
              className="car-preview__description"
            >
              <div
                className="car-preview__description-text"
              >
                The Fiat Punto is a supermini car produced by the Italian manufacturer Fiat since 1993.
              </div>
              <div>
                Top speed: 
                235
                km/h
              </div>
            </div>
            <img
              alt="Mazda 3"
              className="car-preview__image"
              src="https://www.mazdausa.com/siteassets/vehicles/2017/m3s/trims/sport/17-m3s-sp-25d-snowflake-white.png"
            />
          </div>
        </div>
        <div
          className="car-preview__title"
        >
          Mazda 3
        </div>
      </div>
    </div>
    <div
      className="col-md-4 col-sm-6 col-xs-12 cars-overview-grid__item"
    >
      <div
        className="car-preview  "
        data-id={3}
        onClick={[Function]}
      >
        <div
          className="car-preview__card"
        >
          <div
            className="car-preview__front"
          >
            <img
              alt="Mercedes Benz CLA"
              className="car-preview__image"
              src="http://www.nriol.com/images/benz-cla.png"
            />
          </div>
          <div
            className="car-preview__back"
          >
            <div
              className="car-preview__overlay"
            />
            <div
              className="car-preview__description"
            >
              <div
                className="car-preview__description-text"
              >
                The Fiat Punto is a supermini car produced by the Italian manufacturer Fiat since 1993.
              </div>
              <div>
                Top speed: 
                280
                km/h
              </div>
            </div>
            <img
              alt="Mercedes Benz CLA"
              className="car-preview__image"
              src="http://www.nriol.com/images/benz-cla.png"
            />
          </div>
        </div>
        <div
          className="car-preview__title"
        >
          Mercedes Benz CLA
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CarsOverview renders correctly with Mazda 3 and Mercedes Benz CLA, where Mazda 3 is selected 1`] = `
<div
  className="container-fluid"
>
  <div
    className="row cars-overview-grid"
  >
    <div
      className="col-md-4 col-sm-6 col-xs-12 cars-overview-grid__item"
    >
      <div
        className="car-preview car-preview--selected "
        data-id={2}
        onClick={[Function]}
      >
        <div
          className="car-preview__card"
        >
          <div
            className="car-preview__front"
          >
            <img
              alt="Mazda 3"
              className="car-preview__image"
              src="https://www.mazdausa.com/siteassets/vehicles/2017/m3s/trims/sport/17-m3s-sp-25d-snowflake-white.png"
            />
          </div>
          <div
            className="car-preview__back"
          >
            <div
              className="car-preview__overlay"
            />
            <div
              className="car-preview__description"
            >
              <div
                className="car-preview__description-text"
              >
                The Fiat Punto is a supermini car produced by the Italian manufacturer Fiat since 1993.
              </div>
              <div>
                Top speed: 
                235
                km/h
              </div>
            </div>
            <img
              alt="Mazda 3"
              className="car-preview__image"
              src="https://www.mazdausa.com/siteassets/vehicles/2017/m3s/trims/sport/17-m3s-sp-25d-snowflake-white.png"
            />
          </div>
        </div>
        <div
          className="car-preview__title"
        >
          Mazda 3
        </div>
      </div>
    </div>
    <div
      className="col-md-4 col-sm-6 col-xs-12 cars-overview-grid__item"
    >
      <div
        className="car-preview  "
        data-id={3}
        onClick={[Function]}
      >
        <div
          className="car-preview__card"
        >
          <div
            className="car-preview__front"
          >
            <img
              alt="Mercedes Benz CLA"
              className="car-preview__image"
              src="http://www.nriol.com/images/benz-cla.png"
            />
          </div>
          <div
            className="car-preview__back"
          >
            <div
              className="car-preview__overlay"
            />
            <div
              className="car-preview__description"
            >
              <div
                className="car-preview__description-text"
              >
                The Fiat Punto is a supermini car produced by the Italian manufacturer Fiat since 1993.
              </div>
              <div>
                Top speed: 
                280
                km/h
              </div>
            </div>
            <img
              alt="Mercedes Benz CLA"
              className="car-preview__image"
              src="http://www.nriol.com/images/benz-cla.png"
            />
          </div>
        </div>
        <div
          className="car-preview__title"
        >
          Mercedes Benz CLA
        </div>
      </div>
    </div>
  </div>
</div>
`;
